# smart_auth_with_kubernate_redis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
alembic/: env.py
alembic/versions/: 20260308_0001_create_auth_tables.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  health.py  router.py  system.py
app/core/: config.py  logging.py  metrics.py  rate_limiter.py  security.py
app/db/: base.py  session.py
app/middleware/: observability.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  auth.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  oauth_service.py
app/web/: app.js  index.html  styles.css
grafana/dashboards/: smart-auth-observability.json
grafana/provisioning/dashboards/: dashboard.yml
k8s/: README.md
k8s/base/: api.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  redis.yaml
k8s/overlays/local/: api-patch.yaml  config.env.example  ingress-patch.yaml  kustomization.yaml
k8s/overlays/production/: api-patch.yaml  config.env.example  ingress-patch.yaml  kustomization.yaml  secrets.env.example
nginx/: default.conf
prometheus/: prometheus.yml
scripts/: bootstrap-local-env.ps1  cleanup-docker.ps1  export-k8s-overlay-env.ps1
tests/: test_auth_security.py  test_dashboard.py  test_health.py  test_kubernetes_integration.py  test_metrics.py  test_system_overview.py
